# dmp-ros-pkg

arm_robot_model/: CMakeLists.txt  CMakeLists.txt~  package.xml
arm_robot_model/launch/: arm_robot_model.launch  arm_robot_model.launch~
arm_robot_model/models/: DarpaRobot.urdf  DarpaRobot.urdf.xacro  DarpaRobot.urdf.xacro~  arm.urdf  arm.urdf.xacro  arm.urdf.xacro~  bml_wam.urdf  bml_wam.urdf.xacro  bml_wam.urdf.xacro~  hand.urdf.xacro  headAssembly.urdf.xacro  headAssembly.urdf.xacro~
dmp/dmp_behavior_actions/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dmp/dmp_behaviors/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dmp/dmp_behaviors/demonstrations/: dmp_rollout.bag  dmp_rollout_newgoal.bag  dmp_rollout_x0.5.bag  dmp_rollout_x0.5_newgoal.bag  dmp_rollout_x0.75.bag  dmp_rollout_x0.75_newgoal.bag  dmp_rollout_x1.2.bag  dmp_rollout_x1.2_newgoal.bag  dmp_rollout_x1.5.bag  dmp_rollout_x1.5_newgoal.bag  dmp_rollout_x1.bag  joint_space_dmp.bag  joint_states_wam.bag  rollout_joint_demonstration.clmc  rollout_joint_reproduction.clmc
dmp/dmp_behaviors/demonstrations/NC2010/: no_object.bag
dmp/dmp_behaviors/launch/: arm_learning_from_demonstration_behavior.launch~
dmp/dmp_behaviors/src/: learning_from_demonstration.cpp  learning_from_demonstration_client.h~  learning_from_demonstration_client_node.cpp  test_dmp.cpp  test_dmp.cpp~  test_dmp_1.cpp
dmp/dynamic_movement_primitive/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dmp/dynamic_movement_primitive/dmpLib/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
dmp/dynamic_movement_primitive/include/: dynamic_movement_primitive.cpp
dmp/dynamic_movement_primitive/msg/: ControllerStatusMsg.msg  DMPUtilitiesMsg.msg  TransformationSystemParametersMsg.msg
dmp/dynamic_movement_primitive/src/: canonical_system.cpp~  canonical_system1.cpp~  dynamic_movement_primitive.cpp  locally_weighted_regression.cpp  nc2010_canonical_system.cpp~  nc2010_canonical_system_1.cpp~  nc2010_dynamic_movement_primitive.cpp  nc2010_dynamic_movement_primitive.cpp~  nc2010_transformation_system.cpp  nc2010_transformation_system.cpp~  nc2010_transformation_system_1.cpp  transformation_system.cpp  transformation_system_1.cpp
dmp/dynamic_movement_primitive/test/: dynamic_movement_primitive_test.cpp  dynamic_movement_primitive_test_1.cpp  dynamic_movement_primitive_test_1.cpp~
dmp/dynamic_movement_primitive_utilities/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dmp/dynamic_movement_primitive_utilities/config/: arm_test_params.yaml
dmp/dynamic_movement_primitive_utilities/launch/: arm_dynamic_movement_primitive_utilities_test.launch~
dmp/dynamic_movement_primitive_utilities/src/: dynamic_movement_primitive_controller_client.cpp  dynamic_movement_primitive_learner_utilities.cpp  dynamic_movement_primitive_utilities.cpp  dynamic_movement_primitive_utilities_1.cpp  trajectory_utilities.cpp  trajectory_utilities.cpp~
dmp/dynamic_movement_primitive_utilities/test/: dynamic_movement_primitive_utilities_test.cpp  dynamic_movement_primitive_utilities_test_1.cpp  dynamic_movement_primitive_utilities_test_1.cpp~
policy_learning/policy_library/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
policy_learning/policy_library/include/: dmp_policy.h  dmp_policy.h~  policy.h
policy_learning/policy_library/src/: dmp_policy.cpp  policy.cpp
policy_learning/policy_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pr2/pr2_dynamic_movement_primitive_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pr2/pr2_dynamic_movement_primitive_controller/launch/: dmp_ik_controller_loader.launch  dmp_ik_controller_loader.launch~  pr2_default_controllers.launch  pr2_empty_world.launch  pr2_empty_world.launch~  pr2_slim_no_controllers.launch  pr2_slim_no_controllers.launch~
pr2/pr2_dynamic_movement_primitive_controller/src/: cartesian_twist_controller_ik_with_nullspace_optimization.cpp  dmp_ik_controller.cpp  dmp_joint_position_controller.cpp  joint_position_controller.cpp  variable_name_map.cpp
pr2/pr2_task_recorder2/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pr2/pr2_task_recorder2/include/: pr2_task_recorder_factory_1.h  pr2_task_recorder_manager_1.h
pr2/pr2_task_recorder2/src/: pr2_task_recorder_factory.cpp  pr2_task_recorder_factory.cpp~  pr2_task_recorder_manager.cpp  pr2_task_recorder_manager.cpp~  pr2_task_recorder_manager_node.cpp
task_recorder/task_recorder2/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
task_recorder/task_recorder2_file_io/: CMakeLists.txt  CMakeLists.txt~  package.xml
task_recorder/task_recorder2_msgs/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml  package.xml~
usc_utils/bspline/: CMakeLists.txt  package.xml~
usc_utils/bspline/src/: BSpline.cpp  BSplineBase.cpp  BSplineBase.cpp~
usc_utils/conversions/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml
usc_utils/inverse_kinematics/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
usc_utils/inverse_kinematics/include/: inverse_kinematics_with_nullspace_optimization.cpp
usc_utils/inverse_kinematics/src/: inverse_kinematics_with_nullspace_optimization.cpp
usc_utils/jacobian_utilities/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
usc_utils/quadprog/: CMakeLists.txt  CMakeLists.txt~  package.xml
usc_utils/robot_info/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml  package.xml~
usc_utils/robot_info/config/: wam_interface_description.yaml~  wam_planning_groups.yaml  wam_planning_groups.yaml~
usc_utils/usc_utilities/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
usc_utils/visualization_utilities/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
usc_utils/visualization_utilities/include/: robot_pose_visualizer.h  visualization_utilities.cpp  visualization_utilities.cpp~
usc_utils/visualization_utilities/src/: robot_pose_visualizer.cpp  robot_pose_visualizer.cpp~
(+266 files in other folders)
