<package>
  <name>dmp_behavior_actions</name>
  <version>0.0.0</version>
  <description>the dmp_behavior_action package</description>
  <author>Peter Pastor, Mrinal Kalakrishnan</author>
  <license>BSD</license>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <url>http://ros.org/wiki/dynamic_movement_primitive_utilities</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>task_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_movement_primitive</build_depend>
  <build_depend>skill_library</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>task_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_movement_primitive</run_depend>
  <run_depend>skill_library</run_depend>

</package>


