<package>
  <name>dmp_behaviors</name>
  <version>0.0.0</version>
  <description>the dmp_behaviors package</description>
  <author>Peter Pastor, Mrinal Kalakrishnan</author>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/dynamic_movement_primitives</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>usc_utilities</build_depend>
  <build_depend>dmp_behavior_actions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>task_msgs</build_depend>
  <build_depend>skill_library</build_depend>
  <build_depend>dynamic_movement_primitive</build_depend>
  <build_depend>dynamic_movement_primitive_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>usc_utilities</run_depend>
  <run_depend>dmp_behavior_actions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>task_msgs</run_depend>
  <run_depend>skill_library</run_depend>
  <run_depend>dynamic_movement_primitive</run_depend>
  <run_depend>dynamic_movement_primitive_utilities</run_depend>


  
  <!-- <depend package="tabletop_object_detector"/> -->

</package>


