<package>
  <name>dynamic_movement_primitive_utilities</name>
  <version>0.0.0</version>
  <description>the inverse_kinematics package</description>
  <author>Peter Pastor, Mrinal Kalakrishnan</author>
  <license>BSD</license>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <url>http://ros.org/wiki/dynamic_movement_primitive_utilities</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>usc_utilities</build_depend>
  <build_depend>visualization_utilities</build_depend>
  <build_depend>inverse_kinematics</build_depend>
  <build_depend>robot_info</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>dynamic_movement_primitive</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>usc_utilities</run_depend>
  <run_depend>visualization_utilities</run_depend>
  <run_depend>inverse_kinematics</run_depend>
  <run_depend>robot_info</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>dynamic_movement_primitive</run_depend>
  <run_depend>cmake_modules</run_depend>


  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldynamic_movement_primitive_utilities"/>
  </export>

</package>


