<package>
  <name>task_recorder2</name>
  <version>0.0.0</version>
  <description>The task_recorder2 package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <author>Peter Pastor</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/task_recorder2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>usc_utilities</build_depend>
  <build_depend>task_recorder2_msgs</build_depend>
  <build_depend>task_recorder2_utilities</build_depend>
  <build_depend>dynamic_movement_primitive</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>genmsg</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>usc_utilities</run_depend>
  <run_depend>task_recorder2_msgs</run_depend>
  <run_depend>task_recorder2_utilities</run_depend>
  <run_depend>dynamic_movement_primitive</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>genmsg</run_depend>


  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/srv_gen/cpp/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltask_recorder2 -ltask_recorder2_manager -ltask_recorder2_manager_client"/>
  </export>

</package>


