<package>
  <name>task_recorder2_msgs</name>
  <version>0.0.0</version>
  <description>the task_recorder2_msgs package</description>
  <maintainer email="hm@barrett.com">robot</maintainer>
  <author>Peter Pastor</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/task_recorder2_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/srv_gen/cpp/include -I${prefix}/msg_gen/cpp/include" />
  </export>

</package>


