<package>
  <name>inverse_kinematics</name>
  <version>0.0.0</version>
  <description>the inverse_kinematics package</description>
  <author>Mrinal Kalakrishnan</author>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/inverse_kinematics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>visualization_utilities</build_depend>
  <build_depend>robot_info</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>visualization_utilities</run_depend>
  <run_depend>robot_info</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -linverse_kinematics"/>
  </export>


</package>


