<package>
  <name>jacobian_utilities</name>
  <version>0.0.0</version>
  <description>the jacobian_utilities package</description>
  <author>Ludovic Righetti</author>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/jacobian_utilities</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robot_info</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>robot_info</run_depend>
  

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ljacobian_utilities"/>
  </export>


</package>


