<package> 
  <name>robot_info</name>
  <version>0.0.0</version>
  <description>the robot_info package</description>
  <author>Mrinal Kalakrishnan</author>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/robot_info</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>usc_utilities</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>usc_utilities</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>cmake_modules</run_depend>

 

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lrobot_info"/>
  </export>

</package>


